# waypoint

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  publish-sdk-dotnet.yml  publish-sdk-python.yml  publish-sdk-typescript.yml
backend/: Dockerfile  Waypoint.sln
backend/src/Tracewire.Application/Services/: EventService.cs  HitlNotificationService.cs
backend/src/Tracewire.Infrastructure/: TracewireDbContext.cs
backend/src/Waypoint.Api/: Program.cs  Waypoint.Api.csproj  Waypoint.Api.http  appsettings.json
backend/src/Waypoint.Application/: Waypoint.Application.csproj
backend/src/Waypoint.Infrastructure/: Waypoint.Infrastructure.csproj  WaypointDbContext.cs
backend/tests/Tracewire.Api.Tests/: ApiTests.cs
backend/tests/Waypoint.Api.Tests/: ApiTests.cs  Waypoint.Api.Tests.csproj
backend/tests/Waypoint.Domain.Tests/: EntityTests.cs  Waypoint.Domain.Tests.csproj
docs/: PRD.md
examples/: demo_agent.cs  demo_agent.py  demo_langchain.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: HealthPage.tsx  TraceDetailPage.tsx  TracesListPage.tsx
frontend/src/types/: index.ts
sdk/dotnet/: README.md  Waypoint.Sdk.sln
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_buffer.py  test_models.py
sdk/python/tracewire/: __init__.py  models.py  trace.py
sdk/python/tracewire/adapters/: __init__.py  autogen.py  crewai.py  langchain.py
sdk/python/waypoint/: __init__.py  buffer.py  client.py  models.py  trace.py
sdk/python/waypoint/adapters/: __init__.py  autogen.py  crewai.py  langchain.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: buffer.ts  client.ts  index.ts  models.ts  trace.ts
sdk/typescript/tests/: ai-sdk.test.ts  buffer.test.ts
site/: index.html  robots.txt
(+46 files in other folders)
