[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waypoint-sdk"
version = "0.1.0"
description = "Waypoint SDK for AI agent observability and control"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
autogen = ["autogen-core>=0.4"]
crewai = ["crewai>=0.50"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["waypoint"]
