[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracewire-sdk"
version = "0.1.0"
description = "Tracewire SDK for AI agent observability and control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Tracewire" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["ai", "agents", "observability", "tracing", "llm"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://tracewire.dev"
Repository = "https://github.com/tracewire/tracewire"
Issues = "https://github.com/tracewire/tracewire/issues"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
autogen = ["autogen-core>=0.4"]
crewai = ["crewai>=0.50"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["tracewire"]
